objects/FSL__Territory_Optimization_Request__c.object
<CustomObject>
    <fields>
        <fullName>FSL__AvgTravelTimeAfter__c</fullName>
        <label>Avg Travel Per Service With Home After</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__AvgTravelTimeBefore__c</fullName>
        <label>Avg Travel Per Service With Home Before</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__AvgTravelTimeWithoutHomeAfter__c</fullName>
        <label>Avg Travel Per Service w/o Home After</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__AvgTravelTimeWithoutHomeBefore__c</fullName>
        <label>Avg Travel Per Service w/o Home Before</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__NonCapacityBasedServicesAfter__c</fullName>
        <label>Non Capacity Based Services After</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__NonCapacityBasedServicesBefore__c</fullName>
        <label>Non Capacity Based Services Before</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Optimization_Request__c</fullName>
        <label>Optimization Request</label>
        <referenceTo>FSL__Optimization_Request__c</referenceTo>
        <relationshipLabel>Territory Optimization Requests</relationshipLabel>
        <relationshipName>Territory_Optimization_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSL__ServiceTerritory__c</fullName>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Territory Optimization Requests</relationshipLabel>
        <relationshipName>Territory_Optimization_Requests</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfCapacityBasedResources__c</fullName>
        <label>Number Of Capacity Based Resources</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfCrews__c</fullName>
        <label>Number Of Crews</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfOptimizableServices__c</fullName>
        <label>Number Of Optimizable Services</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfResources__c</fullName>
        <label>Number Of Resources</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfScheduledServicesAfter__c</fullName>
        <label>Number Of Scheduled Services After</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfScheduledServicesBefore__c</fullName>
        <label>Number Of Scheduled Services Before</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelByPrimaryMembershipAfter__c</fullName>
        <label>Total Travel By Primary STM After</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelByPrimaryMembershipBefore__c</fullName>
        <label>Total Travel By Primary STM Before</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelTimeAfter__c</fullName>
        <label>Total Travel With Home After</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelTimeBefore__c</fullName>
        <label>Total Travel With Home Before</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelTimeWithoutHomeAfter__c</fullName>
        <label>Total Travel Without Home After</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelTimeWithoutHomeBefore__c</fullName>
        <label>Total Travel Without Home Before</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalWorkCapacity__c</fullName>
        <label>Work Capacity</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalWorkDurationScheduledAfter__c</fullName>
        <label>Total Work Duration Scheduled After</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalWorkDurationScheduledBefore__c</fullName>
        <label>Total Work Duration Scheduled Before</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__UtilizationTotalAfter__c</fullName>
        <label>Utilization Total After</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__UtilizationTotalBefore__c</fullName>
        <label>Utilization Total Before</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__UtilizationWrenchAfter__c</fullName>
        <label>Utilization Wrench After</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__UtilizationWrenchBefore__c</fullName>
        <label>Utilization Wrench Before</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Territory Optimization Request</label>
    <nameField>
        <displayFormat>LOR-{00000}</displayFormat>
        <label>Territory Optimization Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Optimization Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>